--- a/index.html
+++ b/index.html
@@ -1,7 +1,55 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <<div id="title-box">
+
+          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+          <h4>PHARRELL WILLIAMS</h4>
+
+          <!-- Level 2 'HAPPY' Header -->
+          <h2>HAPPY</h2>
+
+          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <h4>FROM DESPICABLE ME 2</h4>
+
+        </div>
+      </div>
+
+      <div id="back" class="album">
+
+        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3>| FROM DESPICABLE ME 2</h3>
+
+        <!-- Level 1 'HAPPY' Header -->
+        <h1>HAPPY</h1>
+
+        <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3>WRITTEN BY</h3>
+
+        <!-- pararaph text 'PUBLISHED BY...' -->
+        <p>PUBLISHED BY<span class="crimson-text"> PHARRELLWILLIAMS.COM</span></p>
+
+        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+
+        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img
+        src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
+        alt="colombian-log.png"
+        title="COLOMBIANRECORDS.COM"
+        />
+
+        <!-- span text 'COLUMBIARECORDS.COM' -->
+        <p>PUBLISHED BY<span class="crimson-text">COLUMBIARECORDS.COM</span></p>
+
+        <br>
+
+        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <image
+        src="https://s3.amazonaws.com/learn-verified/sony-logo.png"
+        alt="colombian-log.png"
+        title="COLOMBIANRECORDS.COM"
+        />
+meta charset="UTF-8">
     <title>HTML Album Cover</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -21,25 +69,77 @@
 
       <div id="back" class="album">
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h1>-- Level 3 '| FROM DESPICABLE ME</h1> 
 
-        <!-- Level 1 'HAPPY' Header -->
+        <h2>Level 1 'HAPPY'</h2> 
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3>Level 3 'WRITTEN BY...'</h3>--  
 
-        <!-- pararaph text 'PUBLISHED BY...' -->
+        <p>PUBLISHED BY...'
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+        'PHARRELLWILLIAMS.COM' </p>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        src=https://s3.amazonaws.com/learn-verified/columbia-logo.png/>
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        src=https://s3.amazonaws.com/learn-verified/sony-logo.png/>
 
       </div>
     </div>
   </body>
-</html>
+</html><div id="title-box">
+
+          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+          <h4>PHARRELL WILLIAMS</h4>
+
+          <!-- Level 2 'HAPPY' Header -->
+          <h2>HAPPY</h2>
+
+          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <h4>FROM DESPICABLE ME 2</h4>
+
+        </div>
+      </div>
+
+      <div id="back" class="album">
+
+        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3>| FROM DESPICABLE ME 2</h3>
+
+        <!-- Level 1 'HAPPY' Header -->
+        <h1>HAPPY</h1>
+
+        <!-- Level 3 'WRITTEN BY...' Header -->
+        <h3>WRITTEN BY</h3>
+
+        <!-- pararaph text 'PUBLISHED BY...' -->
+        <p>PUBLISHED BY<span class="crimson-text"> PHARRELLWILLIAMS.COM</span></p>
+
+        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+
+        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img
+        src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
+        alt="colombian-log.png"
+        title="COLOMBIANRECORDS.COM"
+        />
+
+        <!-- span text 'COLUMBIARECORDS.COM' -->
+        <p>PUBLISHED BY<span class="crimson-text">COLUMBIARECORDS.COM</span></p>
+
+        <br>
+
+        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <image
+        src="https://s3.amazonaws.com/learn-verified/sony-logo.png"
+        alt="colombian-log.png"
+        title="COLOMBIANRECORDS.COM"
+        />
+
+      </div>
+    </div>
+    </body>
+    </html>
